--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url(./estilos/index.css);
+@import url(./estilos/main.css);
 @import url(./estilos/navbar.css);
 @import url(./estilos/form.css);
 @import url(./estilos/historial.css);
