--- a/src/estilos/boton.css
+++ b/src/estilos/boton.css
@@ -12,6 +12,13 @@ button:hover {
   background: var(--secundario);
 }
 
+#eliminarHistorial {
+  background: rgb(255, 0, 0);
+}
+#eliminarHistorial:hover {
+  background: rgb(250, 78, 78);
+}
+
 #eliminar {
   display: inline-flex;
   position: absolute;
@@ -21,6 +28,11 @@ button:hover {
   border-radius: 50%;
   padding: 5px;
   z-index: 0;
+  background: rgb(255, 0, 0);
+}
+
+#eliminar:hover {
+  background: rgb(250, 78, 78);
 }
 
 
