--- a/src/estilos/historial.css
+++ b/src/estilos/historial.css
@@ -1,5 +1,5 @@
 ul {
-  width: 100%;
+  width: 80%;
   display: grid;
   gap: 1rem;
   margin: 1rem 0;
@@ -12,12 +12,13 @@ li {
   flex-wrap: wrap;
   justify-content: space-between;
   width: 18rem;
-  height: 12rem;
+  max-width: 100%;
+  height: 100%;
   margin: auto;
   gap: 0.5rem;
   background-color: var(--blanco);
   font-family: var(--font);
-  border-radius: var(--radius);    
+  border-radius: var(--radius);
 }
 
 #titulo {
